# 2025_dsa_SW

./: .gitignore  CMakeLists.txt  LICENSE  README.md
FE/: grid.hpp
src/: nqueens.cpp
